Track Bundle and Chart in Application CRD
